overflow-fix

--- a/mobile-menu.css
+++ b/mobile-menu.css
@@ -15,6 +15,7 @@
   background: white;
   z-index: 1;
   overflow-y: scroll;
+  overflow-x: hidden;
   padding-top:40px;
 }
 
